# kis-llm-trader

./: .env.example  .gitignore  .gitmodules  README.md  config.py  kis_bootstrap.py  main.py  pyproject.toml  view.py
adapter/: broker.py  market_stream.py
docs/: open-trading-bot-plan.md
lambda/: Makefile  discord_sender.py  kis_client.py  llm_summarizer.py  market_digest.py  news_crawler.py  requirements.txt
notify/: discord.py  discord_bot.py
risk/: guardrails.py
store/: journal.py
strategy/: context.py  indicators.py  llm_decider.py  presets.py
tests/: test_guardrails.py
