[project]
name = "kis-llm-trader"
version = "0.1.0"
description = "LLM이 정해진 선택지(BUY/SELL/HOLD) 중 고르고, 코드 가드레일이 위험을 강제 차단하는 KIS 자동매매 토이프로젝트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
    "pycryptodome>=3.20",
    "pandas>=2.0",
    "discord.py>=2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

# 공식 KIS 샘플(vendor/, reference/)은 우리 패키징 대상이 아니다.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
